--- a/css/charlie.css
+++ b/css/charlie.css
@@ -3,25 +3,35 @@ body{
 	font-family: 'Indie Flower', cursive;
 	font-size: 20px; 
 	line-height: 30px; 
-	
 }
 
 header{
 	background-color: #FFC433;
 	text-align: center; 
 	padding-top: 50px;
-	padding-bottom: 50px; 
+	padding-bottom: 30px; 
 }
 
-header h1{
-	color: black;
-	font-size: 40px; 
+div.intro{
+	text-align: center;
+	list-style-position: inside;  
+} 
 
+
+
+div.peanuts{
+	text-align: center; 
+	list-style-position: inside; 
+}
+header h1{
+
+	font-size: 60px; 
+	font-style: bold; 
 }
 
 h2{
-	font-size: 35px;
-	color: blue; 
+	text-align: center;
+	font-size: 45px;
 	margin: 40px 0 10px; 
 }
 
@@ -36,7 +46,6 @@ main{
 	max-width: 800px; 
 	margin: 0 auto; 
 	padding: 20px;
-
 }
 
 p.caption{
@@ -51,9 +60,9 @@ main img{
 }
 
 a{
-	color: blue;
-	 
+	color: blue; 
 }
+
 a:hover{
 	color: white;
 	background-color: yellow; 
@@ -65,12 +74,15 @@ footer{
 	color: black;
 	padding: 20px; 
 }
+
 footer p{
 	margin: 0; 
 }
+
 footer a{
 	color: black; 
 }
+
 footer a:hover{
 	color: white;  
 }
